--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
 
 <body>
     <!-- مشغل يوتيوب خفي -->
-    <iframe id="youtubePlayer" width="0" height="0" src="https://www.youtube.com/watch?v=3NycM9lYdRI" frameborder="0" allowfullscreen>
+    <iframe id="youtubePlayer" width="0" height="0" src="https://www.youtube.com/embed/BFWmpuZK3Ww?autoplay=1&loop=1&playlist=BFWmpuZK3Ww" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen>
     </iframe>
 
     <div id="firstScreen" class="screen">
-        <h1>هل تحبني؟ ❤️</h1>
+        <h1>هل تحبيني؟ ❤️</h1>
         <div class="gif-container">
             <img src="https://media3.giphy.com/media/v1.Y2lkPTc5MGI3NjExYm41YWs5Z21uMTRjcmI4cGJhZ2F0bHE5bWc4Z2NrdHd2am1jcHpzciZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/c76IJLufpNwSULPk77/giphy.gif" alt="حب">
         </div>
@@ -28,7 +28,10 @@
     </div>
     <div id="secondScreen" class="screen hidden">
         <img src="https://media.giphy.com/media/26FLdmIp6wJr91JAI/giphy.gif" alt="حب">
-        <p>أحبك أكثر من أي شيء! ❤️</p>
+        <p>أحبك أكثر من أي شيء ❤️ حبيبتي والله ما ادري وش اقول لان كل الكلام ما يوفيك حقك احبك بكل لحظه بكل نفس بكل نظره احبك لانك اجمل شخص مر بحياتي احبك لانك دايم جنبي بكل وقت احبك لانك تفهميني بدون ما اتكلم احبك لانك سبب سعادتي وراحتي احبك لانك صبوره
+            معاي وتتحملين مزاجي احبك لانك دايم تخليني احسن مهما كنت تعبان احبك لانك دايم تحطيني بعيونك وتهتمين فيني احبك لانك تعرفين وش يعجبني حتى بدون ما اطلب احبك لانك باختصار كل شي جميل بالحياه احبك على صبرك على طيبتك على حنانك على كل شي فيك احبك لانك
+            انت ولا احد يقدر ياخذ مكانك احبك اليوم وبكره وكل العمر عيد حب سعيد يا اجمل نعمه بعمري🥹💖🌷
+        </p>
     </div>
     <script src="script.js"></script>
 </body>
